--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   width: 100%;
 }
 
-.main--title {
+.home--title {
   color: #FFF;
   font-feature-settings: 'cv06' on;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -21,7 +21,7 @@
   font-style: normal;
   font-weight: 800;
   line-height: normal;
-  margin: 0;
+  margin-top: 10%;
 }
 
 .buttons {
@@ -46,7 +46,6 @@
   color: #FFF;
   -webkit-text-stroke-width: 1;
   -webkit-text-stroke-color: #000;
-  font-family: Inter;
   font-size: 25px;
   font-style: normal;
   font-weight: 500;
@@ -55,4 +54,10 @@
 
 .page {
   width: 100%;
+}
+
+.background {
+  position: fixed;
+  bottom: 0;
+  z-index: -1;
 }
