--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   align-items: center;
   gap: 2rem;
   width: 100%;
+  height: 100%;
 }
 
 .home--title {
@@ -54,6 +55,7 @@
 
 .page {
   width: 100%;
+  height: 100%;
 }
 
 .background {
