updated story gen, science page, organized files

--- a/src/components/css/Storyboard.css
+++ b/src/components/css/Storyboard.css
@@ -6,6 +6,7 @@
     margin-left: auto;
     margin-right: auto;
     color: white;
+    overflow: auto;
 }
 
 @media (max-width: 767px) {
@@ -17,4 +18,10 @@
     .storyboard, .scienceboard{
         width: 90%;
     }
+}
+
+.storyboard--nav {
+    display: flex;
+    justify-content: space-between;
+    margin-top: auto;
 }
