finished story and science basically, added images to story, testing orientation stuff

--- a/src/components/css/Storyboard.css
+++ b/src/components/css/Storyboard.css
@@ -11,8 +11,18 @@
   overflow: auto;
 }
 
+#story--image {
+  max-width: 50%;
+  max-height: 25%;
+}
+
+.storyConfigboard {
+  overflow:visible;
+}
+
 .story--paragraph {
   margin: 5%;
+  text-align:justify;
 }
 
 @media (max-width: 767px) {
