--- a/src/components/css/Found.css
+++ b/src/components/css/Found.css
@@ -14,6 +14,13 @@
   background-color: black;
   margin-bottom: 20%;
 }
+.image {
+  max-width: 50%;
+  max-height: auto;
+  border-radius: 20px;
+  background-color: black;
+  margin-bottom: 20%;
+}
 
 .popup {
   height: 80vh;
