--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@
   font-weight: 500;
   line-height: normal;
 }
-.button2 {
+/* .button2 {
   width: 100px;
   height: 64px;
   flex-shrink: 0;
@@ -68,6 +68,26 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  text-align: center;
+} */
+.button2 {
+  width: 100px;
+  height: 64px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  background: #0a0909;
+  border: none;
+  color: #fff;
+  /* -webkit-text-stroke-width: 1px; */
+  /* -webkit-text-stroke-color: #000; */
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .page {
