--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
     background: linear-gradient(180deg, #2E3057 0%, #2B1D3E 100%);
-    background-size: 100% 100vh;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     font-family: 'Roboto Mono', monospace;
 }
@@ -8,6 +8,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
+    height: 100vh;
 }
 
 #root {
